// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomInput when type == checkbox and when placeholderHTML is set renders correctly as a CheckBoxInput 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-custom_input auth0-lock-input-checkbox"
  >
    <div
      class="auth0-lock-input-wrap"
    >
      <label>
        <input
          aria-invalid="false"
          aria-label="Custom Input"
          id="1-custom_input"
          name="custom_input"
          type="checkbox"
        />
        <span
          class=""
        >
          <b>
            Placeholder
          </b>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CustomInput when type == checkbox highlights placeholder text when no invalid hint is provided 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-custom_input auth0-lock-error auth0-lock-input-checkbox"
  >
    <div
      class="auth0-lock-input-wrap"
    >
      <label>
        <input
          aria-invalid="true"
          aria-label="Custom Input"
          id="1-custom_input"
          name="custom_input"
          type="checkbox"
        />
        <span
          class="no-hint"
        >
          <b>
            Placeholder
          </b>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CustomInput when type == checkbox renders correctly as a CheckBoxInput 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-custom_input auth0-lock-input-checkbox"
  >
    <div
      class="auth0-lock-input-wrap"
    >
      <label>
        <input
          aria-invalid="false"
          aria-label="Custom Input"
          id="1-custom_input"
          name="custom_input"
          type="checkbox"
        />
        <span
          class=""
        >
          placeholder
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CustomInput when type == checkbox shows an error when value is incorrect 1`] = `
<DocumentFragment>
  <div
    class="auth0-lock-input-block auth0-lock-input-custom_input auth0-lock-error auth0-lock-input-checkbox"
  >
    <div
      class="auth0-lock-input-wrap"
    >
      <label>
        <input
          aria-invalid="true"
          aria-label="Custom Input"
          id="1-custom_input"
          name="custom_input"
          type="checkbox"
        />
        <span
          class=""
        >
          <b>
            Placeholder
          </b>
        </span>
      </label>
    </div>
    <div
      class="auth0-lock-error-msg"
      id="auth0-lock-error-msg-custom_input"
      role="alert"
    >
      <div
        class="auth0-lock-error-invalid-hint"
      >
        invalid-hint-custom_input
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CustomInput when type == hidden renders correctly as a input[type=hidden] 1`] = `
<DocumentFragment>
  <input
    id="1"
    name="custom_input"
    type="hidden"
    value="hidden_value"
  />
</DocumentFragment>
`;

exports[`CustomInput when type == input calls \`changeField\` when changed 1`] = `
[
  1,
  "custom_input",
  "newUser",
  "validator",
]
`;

exports[`CustomInput when type == input renders correctly as a TextInput 1`] = `
<DocumentFragment>
  <div
    data-__type="text_input"
    data-arialabel="Custom Input"
    data-iconurl="iconUrl"
    data-invalidhint="invalid-hint-custom_input"
    data-isvalid="false"
    data-lockid="1"
    data-name="custom_input"
    data-placeholder="placeholder"
    data-value="field-value-custom_input"
  />
</DocumentFragment>
`;

exports[`CustomInput when type == input sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<DocumentFragment>
  <div
    data-__type="text_input"
    data-arialabel="Custom Input"
    data-iconurl="iconUrl"
    data-invalidhint="invalid-hint-custom_input"
    data-isvalid="true"
    data-lockid="1"
    data-name="custom_input"
    data-placeholder="placeholder"
    data-value="field-value-custom_input"
  />
</DocumentFragment>
`;

exports[`CustomInput when type === select calls \`startOptionSelection\` when clicked 1`] = `
[
  1,
  "custom_input",
  "iconUrl",
]
`;

exports[`CustomInput when type === select renders correctly as a SelectInput 1`] = `
<DocumentFragment>
  <div
    data-__type="select_input"
    data-arialabel="Custom Input"
    data-iconurl="iconUrl"
    data-isvalid="false"
    data-lockid="1"
    data-name="custom_input"
    data-placeholder="placeholder"
  />
</DocumentFragment>
`;

exports[`CustomInput when type === select sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<DocumentFragment>
  <div
    data-__type="select_input"
    data-arialabel="Custom Input"
    data-iconurl="iconUrl"
    data-isvalid="true"
    data-lockid="1"
    data-name="custom_input"
    data-placeholder="placeholder"
  />
</DocumentFragment>
`;
